--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="container">
   <div class="row">
+    <p [appHint]="'EnverWasHere'">Selamlar Herkese</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">
         Only show odd numbers
