--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -11,7 +11,7 @@
               id="username"
               class="form-control"
             />
-            <span
+            <san
               *ngIf="
                 signupForm.get('userData.username').invalid &&
                 signupForm.get('userData.username').touched
