--- a/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,26 +1,54 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form #shoppingForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput />
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            name="name"
+            ngModel
+            required
+          />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput />
+          <input
+            type="number"
+            id="amount"
+            class="form-control"
+            name="amount"
+            ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
+          />
         </div>
       </div>
       <div class="row">
         <button
           class="btn btn-success edit-button"
           type="submit"
-          (click)="onAddItem()"
+          [disabled]="shoppingForm.invalid"
         >
-          Add
+          {{ editMode ? "Update" : "Add" }}
         </button>
-        <button class="btn btn-danger edit-button" type="button">Delete</button>
-        <button class="btn btn-primary edit-button" type="button">Clear</button>
+        <button
+          class="btn btn-danger edit-button"
+          type="button"
+          (click)="onDelete()"
+          *ngIf="editMode"
+        >
+          Delete
+        </button>
+        <button
+          class="btn btn-primary edit-button"
+          type="button"
+          (click)="onClear()"
+        >
+          Clear
+        </button>
       </div>
     </form>
   </div>
