--- a/recipe-app/src/app/header/header.component.html
+++ b/recipe-app/src/app/header/header.component.html
@@ -28,7 +28,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li *ngIf="isAuthenticated">
-          <a>Logout</a>
+          <a (click)="onLogout()">Logout</a>
         </li>
         <li class="dropdown" appDropdown>
           <a class="dropdown-toggle dropdown" role="button"
